--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -3,11 +3,12 @@ name: Release Drafter
 on:
   # pull_request event is required only for autolabeler
   pull_request:
-    types: [opened,closed]
+    types: [closed]
 
 jobs:
   update_release_draft:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == 'true'
     steps:
       # Drafts your next Release notes as Pull Requests are merged into "master"
       - uses: release-drafter/release-drafter@v5
